<resources>
    <string name="app_name">Dresser</string>
    <string name="show_item_hint">Are you going to go out?</string>
    <string name="settings_hint">Customize the app for yourself?</string>
    <string name="action_settings">Settings</string>
    <string name="wash_hint">See clothes in the wash?</string>
    <string name="wash_title_hint">laundry catalog</string>
    <string name="wash">Wash</string>
    <string name="washed">Washed</string>
    <string name="select_all">Select all</string>
    <string name="inwash">in wash</string>
    <string name="wardrobe_title_hint">catalog of things</string>
    <string name="wardrobe_hint">Want to add more things?</string>
    <string name="title_wardrobe">Wardrobe</string>
    <string name="title_item">Thing</string>
    <string name="show_item">Select an outfit</string>
    <string name="bot_items">Legs</string>
    <string name="top_items">Torso</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome to </string>
    <string name="template">Template</string>
    <string name="save_template">Save template</string>
    <string name="brand">Brand</string>
    <string name="brand_hint">Enter the name</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="warmth">Warmth</string>
    <string name="layer">Layer</string>
    <string name="cold_temp">Cold</string>
    <string name="mid_temp">Middle</string>
    <string name="hot_temp">Warm</string>
    <string name="back">Back</string>
    <string name="use">Select</string>
    <string name="forward">Next</string>
    <string name="first_look">This is the first set</string>
    <string name="last_look">This is the last set</string>
    <string name="sets">Sets</string>
    <string name="deleted">Removed</string>
    <string name="delete">Delete</string>
    <string name="deleted2">removed</string>
    <string name="ok">OK</string>
    <string name="looks_activity">Looks</string>
    <string name="catalog_looks">Catalog of looks</string>
    <string name="add_look">Add look</string>
    <string name="enter_name">Enter the name</string>
    <string name="add">Add Thing</string>
    <string name="tors">Top things:</string>
    <string name="legs">Bottom things:</string>
    <string name="used_times">Used</string>
    <string name="color_not_set">No color selected</string>
    <string name="choose_layer">Select a layer</string>
    <string name="choose_foto">Add photo</string>
    <string name="from">From</string>
    <string name="created">Created</string>
    <string name="typ_item">Torso/Legs</string>
    <string name="none">Style not selected</string>
    <string name="casual">Casual</string>
    <string name="business">Business</string>
    <string name="elegant">Elegant</string>
    <string name="sport">Sport</string>
    <string name="home">Home</string>
    <string name="template_choose">Choose parameters to create template</string>
    <string name="no_match">Lacks</string>
    <string name="no_top">top things,</string>
    <string name="no_bot">bottom things,</string>
    <string name="no_foot">shoes,</string>
    <string name="no_color">things in color,</string>
    <string name="no_style">things in style,</string>
    <string name="warm">Warms on </string>
    <string name="palette">Palette:</string>
    <string name="weather_header">Weather</string>
    <string name="sync_header">Filters</string>
    <string name="change_theme">Dark theme</string>
    <string name="city">City</string>
    <string name="temp">Set the temperature manually</string>
    <string name="show_style">Display things:</string>
    <string name="weather_set">Match by the weather</string>
    <string name="colors_set">Match by color</string>
    <string name="help">Instructions</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="smooth_scroll">smoothScroll to </string>
    <string name="scroll">scroll to </string>
    <string name="looks">What styles to pick</string>
    <string name="developer">internet not connected?</string>
    <string name="accuracy">Color scatter</string>
    <string name="lookpage">Match for you: </string>
    <string name="colorSet">Select color</string>
    <string name="select">Select</string>
    <string name="colorCustom">Gradients</string>
    <string name="colorPresent">Examples</string>
    <string name="save">Save</string>
    <string name="umbrella">Do not forget to take the UMBRELLA!</string>
    <string name="now_word">Now in the city</string>
    <string name="dialog_message">Are you sure what you want choose this set?</string>
    <string name="dialog_title">Choose set</string>
    <string name="sorted_by">Sort by:</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="intro_magic_title">Automatic background clearing</string>
    <string name="intro_manual_title">Manual background clearing</string>
    <string name="intro_zoom_title">Zooming and Moving the picture</string>
    <string name="intro_magic_description">Use the Magic Wand tool and touch parts of the background you want to erase</string>
    <string name="intro_manual_description">Use the Pencil tool to erase the background dragging your finger around the screen</string>
    <string name="intro_zoom_description">Use the Magnifier tool to Zoom in/out so you can make better cuts</string>
    <string name="intro_label">Quick look</string>
    <string name="image_chooser_message">Choose an image to cut</string>
    <string name="White">White</string>
    <string name="Ivory">Ivory</string>
    <string name="LightYellow">LightYellow</string>
    <string name="Yellow">Yellow</string>
    <string name="Snow">Snow</string>
    <string name="FloralWhite">FloralWhite</string>
    <string name="LemonChiffon">LemonChiffon</string>
    <string name="Cornsilk">Cornsilk</string>
    <string name="Seashell">Seashell</string>
    <string name="LavenderBlush">LavenderBlush</string>
    <string name="PapayaWhip">PapayaWhip</string>
    <string name="BlanchedAlmond">BlanchedAlmond</string>
    <string name="MistyRose">MistyRose</string>
    <string name="Bisque">Bisque</string>
    <string name="Moccasin">Moccasin</string>
    <string name="NavajoWhite">NavajoWhite</string>
    <string name="PeachPuff">PeachPuff</string>
    <string name="Gold">Gold</string>
    <string name="Pink">Pink</string>
    <string name="LightPink">LightPink</string>
    <string name="Orange">Orange</string>
    <string name="LightSalmon">LightSalmon</string>
    <string name="DarkOrange">DarkOrange</string>
    <string name="Coral">Coral</string>
    <string name="HotPink">HotPink</string>
    <string name="Tomato">Tomato</string>
    <string name="OrangeRed">OrangeRed</string>
    <string name="DeepPink">DeepPink</string>
    <string name="Fuchsia">Fuchsia</string>
    <string name="Magenta">Magenta</string>
    <string name="Red">Red</string>
    <string name="OldLace">OldLace</string>
    <string name="LightGoldenrodYellow">LightGoldenrodYellow</string>
    <string name="Linen">Linen</string>
    <string name="AntiqueWhite">AntiqueWhite</string>
    <string name="Salmon">Salmon</string>
    <string name="GhostWhite">GhostWhite</string>
    <string name="MintCream">MintCream</string>
    <string name="WhiteSmoke">WhiteSmoke</string>
    <string name="Beige">Beige</string>
    <string name="Wheat">Wheat</string>
    <string name="SandyBrown">SandyBrown</string>
    <string name="Azure">Azure</string>
    <string name="Honeydew">Honeydew</string>
    <string name="AliceBlue">AliceBlue</string>
    <string name="Khaki">Khaki</string>
    <string name="LightCoral">LightCoral</string>
    <string name="PaleGoldenrod">PaleGoldenrod</string>
    <string name="Violet">Violet</string>
    <string name="DarkSalmon">DarkSalmon</string>
    <string name="Lavender">Lavender</string>
    <string name="LightCyan">LightCyan</string>
    <string name="BurlyWood">BurlyWood</string>
    <string name="Plum">Plum</string>
    <string name="Gainsboro">Gainsboro</string>
    <string name="Crimson">Crimson</string>
    <string name="PaleVioletRed">PaleVioletRed</string>
    <string name="Goldenrod">Goldenrod</string>
    <string name="Orchid">Orchid</string>
    <string name="Thistle">Thistle</string>
    <string name="LightGrey">LightGrey</string>
    <string name="Tan">Tan</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Peru">Peru</string>
    <string name="IndianRed">IndianRed</string>
    <string name="MediumVioletRed">MediumVioletRed</string>
    <string name="Silver">Silver</string>
    <string name="DarkKhaki">DarkKhaki</string>
    <string name="RosyBrown">RosyBrown</string>
    <string name="MediumOrchid">MediumOrchid</string>
    <string name="DarkGoldenrod">DarkGoldenrod</string>
    <string name="FireBrick">FireBrick</string>
    <string name="PowderBlue">PowderBlue</string>
    <string name="LightSteelBlue">LightSteelBlue</string>
    <string name="PaleTurquoise">PaleTurquoise</string>
    <string name="GreenYellow">GreenYellow</string>
    <string name="LightBlue">LightBlue</string>
    <string name="DarkGray">DarkGray</string>
    <string name="Brown">Brown</string>
    <string name="Sienna">Sienna</string>
    <string name="YellowGreen">YellowGreen</string>
    <string name="DarkOrchid">DarkOrchid</string>
    <string name="PaleGreen">PaleGreen</string>
    <string name="DarkViolet">DarkViolet</string>
    <string name="MediumPurple">MediumPurple</string>
    <string name="LightGreen">LightGreen</string>
    <string name="DarkSeaGreen">DarkSeaGreen</string>
    <string name="SaddleBrown">SaddleBrown</string>
    <string name="DarkMagenta">DarkMagenta</string>
    <string name="DarkRed">DarkRed</string>
    <string name="BlueViolet">BlueViolet</string>
    <string name="LightSkyBlue">LightSkyBlue</string>
    <string name="SkyBlue">SkyBlue</string>
    <string name="Gray">Gray</string>
    <string name="Olive">Olive</string>
    <string name="Purple">Purple</string>
    <string name="Maroon">Maroon</string>
    <string name="Aquamarine">Aquamarine</string>
    <string name="Chartreuse">Chartreuse</string>
    <string name="LawnGreen">LawnGreen</string>
    <string name="MediumSlateBlue">MediumSlateBlue</string>
    <string name="LightSlateGray">LightSlateGray</string>
    <string name="SlateGray">SlateGray</string>
    <string name="OliveDrab">OliveDrab</string>
    <string name="SlateBlue">SlateBlue</string>
    <string name="DimGray">DimGray</string>
    <string name="MediumAquamarine">MediumAquamarine</string>
    <string name="CornflowerBlue">CornflowerBlue</string>
    <string name="CadetBlue">CadetBlue</string>
    <string name="DarkOliveGreen">DarkOliveGreen</string>
    <string name="Indigo">Indigo</string>
    <string name="MediumTurquoise">MediumTurquoise</string>
    <string name="DarkSlateBlue">DarkSlateBlue</string>
    <string name="SteelBlue">SteelBlue</string>
    <string name="RoyalBlue">RoyalBlue</string>
    <string name="Turquoise">Turquoise</string>
    <string name="MediumSeaGreen">MediumSeaGreen</string>
    <string name="LimeGreen">LimeGreen</string>
    <string name="DarkSlateGray">DarkSlateGray</string>
    <string name="SeaGreen">SeaGreen</string>
    <string name="ForestGreen">ForestGreen</string>
    <string name="LightSeaGreen">LightSeaGreen</string>
    <string name="DodgerBlue">DodgerBlue</string>
    <string name="MidnightBlue">MidnightBlue</string>
    <string name="Aqua">Aqua</string>
    <string name="Cyan">Cyan</string>
</resources>