<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="154dp"
        android:layout_height="260dp"
        android:layout_marginVertical="8dp"
        android:background="@null"
        app:cardCornerRadius="20dp">
        <ImageView
            android:layout_width="154dp"
            android:layout_height="260dp"
            android:background="@drawable/gradient"/>
        <androidx.cardview.widget.CardView
            android:layout_width="154dp"
            android:layout_height="154dp"
            app:cardCornerRadius="20dp"
            android:background="@null"
            android:stateListAnimator="@animator/card_view"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/delete"
                android:layout_margin="7dp"
                android:layout_gravity="end"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:cardCornerRadius="12.5dp"
                android:stateListAnimator="@animator/card_view"
                android:clickable="true"
                >
            <ImageView
                android:id="@+id/delete_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_delete"
                />
            </androidx.cardview.widget.CardView>
            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="154dp"
                android:layout_height="154dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:background="@null"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="zero"
            />
        <TextView
            android:id="@+id/nameItem"
            android:layout_marginHorizontal="16dp"
            android:textSize="14dp"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="170dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/title_item"/>
        <TextView
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="193dp"
            android:id="@+id/brandItem"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:textSize="10dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"/>
        <TextView
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="208dp"
            android:id="@+id/styleItem"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:textSize="10dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/style"/>
        <TextView
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="223dp"
            android:id="@+id/usedItem"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:textSize="10dp"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/used_times"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>