<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnBackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:onClick="goHome"
                android:src="@drawable/ic_right"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="28dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="11sp"
                    android:textColor="?android:textColorHint"
                    android:textAlignment="textEnd"
                    android:text="@string/wash_title_hint"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textSize="22sp"
                    android:textColor="?attr/colorPrimary"
                    android:textAlignment="textEnd"
                    android:text="@string/wash"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_washer"
                android:layout_marginTop="22dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="30dp"
                android:stateListAnimator="@animator/card_view"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:src="@drawable/button"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_all"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textColor="@android:color/white"
                    />
            </androidx.cardview.widget.CardView>
            <Space android:id="@+id/spacer"
                android:layout_weight="1"
                android:layout_width="15dp"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView
                android:id="@+id/wash_selected"
                android:layout_width="160dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="30dp"
                android:stateListAnimator="@animator/card_view"
                android:layout_gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:src="@drawable/button"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/washed"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:textColor="@android:color/white"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ListView
                    android:id="@+id/list"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="0dp"
                    android:divider="@null"
                    android:clickable="false"
                    />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>